integrated google maps

--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+    
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
@@ -31,6 +32,8 @@
 
   <title>revobike</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9jd3iVquixb7DXDzbs3pt2ZRQ-gcNlaE"></script>
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
